--- a/CheckPlease/Views/Home/Index.cshtml
+++ b/CheckPlease/Views/Home/Index.cshtml
@@ -3,6 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1><a asp-controller="GroupOrders" asp-action="Index">Group Orders Menu</a></h1>
 </div>
