--- a/CheckPlease/Views/GroupOrders/Create.cshtml
+++ b/CheckPlease/Views/GroupOrders/Create.cshtml
@@ -25,17 +25,14 @@
             </div>
             <div id="group_member_fields">
                 <div class="form-group">
-                    @for (int i = 0; i < Model.GroupOrder.GroupSize; i++)
-                    {
-                        <label class="control-label">Group Member:</label>
-                        <select asp-for="@Model.SelectedUserIds" multiple class="form-control">
-                            @foreach (UserProfile up in Model.UserProfiles)
-                            {
-                                <option value="@up.Id">@up.Email</option>
-                            }
-                            <option selected hidden disabled>-- Select User --</option>
-                        </select>
-                    }
+                    <label class="control-label">Group Member:</label>
+                    <select asp-for="@Model.SelectedUserIds" multiple class="form-control">
+                        @foreach (UserProfile up in Model.UserProfiles)
+                        {
+                            <option value="@up.Id">@up.Email</option>
+                        }
+                        <option selected hidden disabled>-- Select User --</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
@@ -50,5 +47,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
