--- a/CheckPlease/Views/GroupOrders/Index.cshtml
+++ b/CheckPlease/Views/GroupOrders/Index.cshtml
@@ -1,10 +1,62 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using System.Security.Claims
+@model CheckPlease.Models.ViewModels.GroupOrderIndexViewModel
+
 @{
+    ViewData["Title"] = "Index";
 }
 
 <div class="text-center">
     <h1><a asp-controller="GroupOrders" asp-action="Create">Create New Group Order</a></h1>
     <h1>Your Group Orders List</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Id
+                </th>
+                <th>
+                    Created By
+                </th>
+                <th>
+                    Restaurant
+                </th>
+                <th>
+                    Ready to Order
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.GroupOrders)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Owner.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Restaurant.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IsReady)
+                    </td>
+                    <td>
+                        @if (item.OwnerId == Model.UserId)
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) @:|
+                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) @:|
+                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                            }
+                        else
+                        {
+                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
