--- a/CheckPlease/Views/GroupOrders/Index.cshtml
+++ b/CheckPlease/Views/GroupOrders/Index.cshtml
@@ -47,12 +47,12 @@
                         @if (item.OwnerId == Model.UserId)
                         {
                             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) @:|
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) @:|
+                            @Html.ActionLink("Details", "Details", new { id=item.Id }) @:|
                             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                             }
                         else
                         {
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+                            @Html.ActionLink("Details", "Details", new { id=item.Id })
                         }
                     </td>
                 </tr>
