--- a/CheckPlease/Views/GroupOrders/Index.cshtml
+++ b/CheckPlease/Views/GroupOrders/Index.cshtml
@@ -46,9 +46,8 @@
                     <td>
                         @if (item.OwnerId == Model.UserId)
                         {
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) @:|
                             @Html.ActionLink("Details", "Details", new { id=item.Id }) @:|
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
                             }
                         else
                         {
