Group order details (#2)
* Get group order by id implemented

* Basic details page is working

* add order form is linked to model and passed to post method

* Edit order get method implemented

* Users can now delete group orders

--- a/CheckPlease/Views/GroupOrders/Index.cshtml
+++ b/CheckPlease/Views/GroupOrders/Index.cshtml
@@ -46,13 +46,12 @@
                     <td>
                         @if (item.OwnerId == Model.UserId)
                         {
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) @:|
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) @:|
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                            @Html.ActionLink("Details", "Details", new { id=item.Id }) @:|
+                            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
                             }
                         else
                         {
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+                            @Html.ActionLink("Details", "Details", new { id=item.Id })
                         }
                     </td>
                 </tr>
